--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #f7e282;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,10 +10,10 @@ body {
 }
 
 .calculator {
-    background: #fff;
+    background: #a5f8f4;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(62, 3, 3, 0.147);
     width: 300px;
     text-align: center;
 }
@@ -36,7 +36,7 @@ label {
 input, select, button {
     margin-bottom: 15px;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #a39e9e;
     border-radius: 4px;
     width: 100%;
 }
@@ -55,4 +55,7 @@ button:hover {
 #result {
     margin-top: 20px;
     font-size: 16px;
+}
+.calculator-display {
+    font-family: 'FontName', monospace;
 }
